[jg1216][ja1616][ri616] Fixed learn more links and improved spacing and hover colour.

--- a/backend_js/public/shared/level_select_style.css
+++ b/backend_js/public/shared/level_select_style.css
@@ -34,6 +34,12 @@
 .learnMoreLink {
   color: white;
   background-color: #2962bc;
+  margin-left: 30px;
+  vertical-align: baseline;
+}
+
+.learnMoreLink:hover {
+  color: #d6d6d6;
 }
 
 .introLink {
